--- a/start.html
+++ b/start.html
@@ -50,6 +50,6 @@
 
         </div>
        </section>
- <script src="./main.js"></script>      
+ <!-- <script src="./animate.js"></script>       -->
 </body>
 </html>
