--- a/fgpassword.html
+++ b/fgpassword.html
@@ -11,6 +11,7 @@
     
 
     <div class="opt-form">
+        <div class="fg-form">
             <div class="header-form">
                 <h4>Forgot password?</h4>
                 <p>Please enter the Verification code we sent to ja*****nes@gmail.com </p>
@@ -32,6 +33,8 @@
 
                 </div>
             </form>
+        </div>
+
 
             <div class="Create-new-pw">
                 <h4>Create New Password</h4>
@@ -52,27 +55,10 @@
 
 <!-- *********************javascriptCode**************** -->
 
-    <script>
-        const inputElement = [...document.querySelectorAll('input.code-input')];
-        inputElement.forEach((elem,index)=>{
-            elem.addEventListener('keydown', (e)=>{
-                if(e.keyCode === 8 && e.target.value === ''){
-                    inputElement[Math.max(0, index - 1)].focus()
-                }
-            });
-
-            elem.addEventListener('input', (e)=>{
-                const [first, ...rest] = e.target.value;
-                e.target.value = first ?? ''
-                const lastInputBox = index === inputElement.length - 1;
-                const insertedCotent = first !== undefined;
-                if(insertedCotent && !lastInputBox){
-                    inputElement[index + 1].focus();
-                    inputElement[index + 1].value = rest.join('')
-                    inputElement[index + 1].dispatchEvent(new Event('input'))
-                }
-            })
-        })
+    <script src="./animate.js">
+       
     </script>
+
+   
 </body>
 </html>
