did part of lolas part

--- a/fgpassword.html
+++ b/fgpassword.html
@@ -48,7 +48,8 @@
 
                 </div>
 
-                <p>Can you still remember your password? <br> <a href=""><span>Go back to your login page</span></a></p>
+    <!-- color: #01fe87; -->
+    <p>Can you still remember your password? <br> <a href="./start.html"><span style="color:#01fe87; opacity: 10;">Go back to your login page</span></a></p>
             </div>
     </div>
 
