added an icon and logo

--- a/fgpassword.html
+++ b/fgpassword.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air2Cash</title>
 
-    <link rel="stylesheet" href="./fgpassword.css">
+    <link rel="icon" href="./image/air2cashimage-removebg-preview.png">
+    <link rel="stylesheet" href="./Stylings/fgpassword.css">
 </head>
 <body>
     
