--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./terms&conitions.css">
+    <link rel="icon" href="./image/air2cashlogo.jpg">
+    <link rel="stylesheet" href="./Stylings/terms&conitions.css">
     <title>Air2Cash</title>
 </head>
 <body>
     <div class="body" style="padding: 3rem;  font-size: 12px; font-family:Verdana, Geneva, Tahoma, sans-serif;">
         <h1 style=" width: 100%;display: flex; justify-content: center; ">Terms & Conditions</h1>
         <p style=" line-height: 1.5rem;">
-            <b>1. Genera Use</b>
+            <b>1. General Use</b>
             <br>
             Air2Cash collects personal information such as your name, phone number, and transaction details to provide and improve our services
             . The data is used to process airtime-to-cash conversations, enhance user experience, and communicate updates
