--- a/Signup.html
+++ b/Signup.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Signup.css">
+    <link rel="icon" href="./image/air2cashlogo.jpg">
+    <link rel="stylesheet" href="./Stylings/Signup.css">
     <title>Air2Cash</title>
 </head>
 <body>
