--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -33,7 +33,7 @@
       </div>
       <div class="add-money-spacing">
         <button class="add-money-btn">+ Add money</button>
-        <a href="#" class="transaction-history-link">Transaction History ➜</a>
+        <a href="./History.html" class="transaction-history-link">Transaction History ➜</a>
       </div>
     </section>
 
@@ -123,7 +123,7 @@
           <i class="fa-solid fa-house"></i>
           <span>Home</span>
         </a>
-        <a href="#" class="footer-link">
+        <a href="./Reward.html" class="footer-link">
           <i class="fa-solid fa-trophy"></i>
           <span>Rewards</span>
         </a>
@@ -132,11 +132,11 @@
           <span>Convert</span>
         </a>
         
-        <a href="#" class="footer-link">
+        <a href="./History.html" class="footer-link">
           <i class="fa-solid fa-clock"></i>
           <span>History</span>
         </a>
-        <a href="#" class="footer-link">
+        <a href="./Profile.html" class="footer-link">
           <i class="fa-solid fa-user"></i>
           <span>Profile</span>
         </a>
