--- a/Pages/Reward.html
+++ b/Pages/Reward.html
@@ -73,7 +73,7 @@
 <!-- Footer Section -->
   <footer class="footer">
     <nav class="footer-nav">
-      <a href="#" class="footer-link">
+      <a href="./Home.html" class="footer-link">
         <i class="fa-solid fa-house"></i>
         <span>Home</span>
       </a>
@@ -86,11 +86,11 @@
         <span>Convert</span>
       </a>
       
-      <a href="#" class="footer-link">
+      <a href="./History.html" class="footer-link">
         <i class="fa-solid fa-clock"></i>
         <span>History</span>
       </a>
-      <a href="#" class="footer-link">
+      <a href="./Profile.html" class="footer-link">
         <i class="fa-solid fa-user"></i>
         <span>Profile</span>
       </a>
