--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -13,11 +13,11 @@
 <!-- Footer Section -->
   <footer class="footer">
     <nav class="footer-nav">
-      <a href="#" class="footer-link">
+      <a href="./Home.html" class="footer-link">
         <i class="fa-solid fa-house"></i>
         <span>Home</span>
       </a>
-      <a href="#" class="footer-link">
+      <a href="./Reward.html" class="footer-link">
         <i class="fa-solid fa-trophy"></i>
         <span>Rewards</span>
       </a>
@@ -26,7 +26,7 @@
         <span>Convert</span>
       </a>
       
-      <a href="#" class="footer-link">
+      <a href="./History.html" class="footer-link">
         <i class="fa-solid fa-clock"></i>
         <span>History</span>
       </a>
