--- a/fgpassword.html
+++ b/fgpassword.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Air2Cash</title>
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" href="./image/air2cashimage-removebg-preview.png">
     <link rel="stylesheet" href="./Stylings/fgpassword.css">
 </head>
