--- a/start.html
+++ b/start.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./image/air2cashlogo.jpg">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="./image/air2cashlogo.jpg">
     <link rel="stylesheet" href="./Stylings/start.css">
     <title>Air2Cash</title>
 </head>
@@ -39,7 +40,7 @@
                     </ul>
                 </div>
                 <div class="input-1">
-                    <button type="submit" value="Sign In" class="signIn">Sign In/Log In</button>
+                    <a href="./Pages/Home.html"><button type="submit" value="Sign In" class="signIn">Sign In/Log In</button></a>
                     </div>
                     <br><br>
                     <span class="dont-acct">Dont have an Air2Cash account yet?</span>
