--- a/start.html
+++ b/start.html
@@ -38,7 +38,7 @@
                     </ul>
                 </div>
                 <div class="input-1">
-                    <button type="submit" value="Sign In" class="signIn">Sign In/Log In</button>
+                    <a href="./otp.html"><button type="submit" value="Sign In" class="signIn">Sign In/Log In</button></a>
                     </div>
                     <br><br>
                     <span class="dont-acct">Dont have an Air2Cash account yet?</span>
