fetching and other things
did the fecthing, sessioning

--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../Styles/Home.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
 </head>
-<body>
+<body onload="checkSessionAndRedirect()">
   <div class="container">
     <!-- Header Section -->
     <header class="header">
@@ -146,5 +147,6 @@
   </div>
 
   <script src="../Scripts/Home.js"></script>
+  <script src="../Scripts/session.js"></script>
 </body>
 </html>
