Did the animations

--- a/otp.html
+++ b/otp.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./otp.css">
+    <link rel="stylesheet" href="./Stylings/otp.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="icon" href="./image/air2cashlogo.jpg">
     <title>Air2Cash</title>
 </head>
 <body>
@@ -40,12 +42,13 @@
                         <input type="text" class="otp-input-code" >
                     </div>
                     <div class="resend"> Resend in 60s</div>
-                <div class="btn-wrap">
-
-                    <a href="#"><button type="submit">Verify Account</button></a>
-
-                </div>
+                    <br>
+               
             </form>
+            <div class="btn-wrap">
+                <a href="./Pages/Home.html"><button type="submit">Verify Account</button></a>
+
+            </div>
         </div>
 
         <script>
