--- a/start.html
+++ b/start.html
@@ -40,7 +40,7 @@
                     </ul>
                 </div>
                 <div class="input-1">
-                    <a href="./Pages/Home.html"><button type="submit" value="Sign In" class="signIn">Sign In/Log In</button></a>
+                    <a href="./otp.html"><button type="submit" value="Sign In" class="signIn">Sign In/Log In</button></a>
                     </div>
                     <br><br>
                     <span class="dont-acct">Dont have an Air2Cash account yet?</span>
