--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -141,6 +141,10 @@
         <a href="./Profile.html" class="footer-link">
           <i class="fa-solid fa-user"></i>
           <span>Profile</span>
+        </a> 
+        <a href="../start.html" style="color: red;" class="footer-link signout">
+          <i class="fa fa-sign-out" aria-hidden="true"></i>
+          <span>Sign Out</span>
         </a>
       </nav>
     </footer>
