--- a/Pages/Reward.html
+++ b/Pages/Reward.html
@@ -94,6 +94,10 @@
         <i class="fa-solid fa-user"></i>
         <span>Profile</span>
       </a>
+      <a href="../start.html" style="color: red;" class="footer-link signout">
+        <i class="fa fa-sign-out" aria-hidden="true"></i>
+        <span>Sign Out</span>
+      </a>
     </nav>
   </footer>
   
