--- a/Pages/Reward.html
+++ b/Pages/Reward.html
@@ -81,7 +81,7 @@
         <i class="fa-solid fa-trophy"></i>
         <span>Rewards</span>
       </a>
-      <a href="#" class="footer-link">
+      <a href="../convert.html" class="footer-link">
         <i class="fa-solid fa-wallet"></i>
         <span>Convert</span>
       </a>
