--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -158,6 +158,6 @@
   <script src="../Scripts/Home.js">
    
   </script>
-  <!-- <script src="../Scripts/session.js"></script> -->
+  <script src="../Scripts/session.js"></script>
 </body>
 </html>
