--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -3,12 +3,100 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>History Page</title>
+  <title>Profile Page</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="../Styles/Profile.css">
 </head>
 <body>
+  <div class="profile-container">
+        <!-- Header -->
+        <header class="profile-header">
+            <button class="back-btn"><i class="fa-solid fa-chevron-left arrow-icon"></i></button>
+            <h1>Profile</h1>
+            <button class="settings-btn"><i class="fa-solid fa-bell"></i></button>
+        </header>
+        <!-- Profile Info -->
+        <div class="profile-info">
+          <img src="../Assets/Profile pic.jpeg" alt="Profile Picture" class="profile-picture">
+          <h2>Jacob Jones</h2>
+          <p class="phone-number">+2347010000001</p>
+      </div>
+
+        <!-- Personal data -->
+      <p>Personal data</p>
+      <div class="personal-data">
+        <div class="data-item">
+            <i class="fa-solid fa-user"></i>
+            <div class="data-content">
+                <span class="value">Jacob Jones</span>
+                <span class="label">Full name</span>
+            </div>
+        </div>
+        <div class="data-item">
+            <i class="fa-solid fa-phone"></i>
+            <div class="data-content">
+              <span class="value">+2347010000001</span>
+              <span class="label">Phone Number</span>        
+            </div>
+        </div>
+        <div class="data-item">
+            <i class="fa-solid fa-envelope"></i>
+            <div class="data-content">
+              <span class="value">jacobjones@gmail.com</span>
+              <span class="label">Email</span>    
+            </div>
+        </div>
+    </div>
+
+        <!-- Security Section -->
+        <p class="sec">Security</p>
+        <div class="security-section">
+          <div class="security-item">
+              <i class="fa-solid fa-lock"></i>
+              <button id="change-password">Change Password</button>
+              <i class="fa-solid fa-chevron-right arrow-icon"></i>
+          </div>
+          <div class="security-item">
+              <i class="fa-solid fa-key"></i>
+              <button id="reset-pin">Reset Transaction PIN</button>
+              <i class="fa-solid fa-chevron-right arrow-icon"></i>
+          </div>
+          <div class="security-item toggle-item">
+              <i class="fa-solid fa-fingerprint"></i>
+              <label class="toggle-label">
+                  Enable Fingerprint
+                  <input type="checkbox" id="enable-fingerprint">
+                  <span class="slider"></span>
+              </label>
+          </div>
+          <div class="security-item toggle-item">
+              <i class="fa-solid fa-eye-slash"></i>
+              <label class="toggle-label">
+                  Hide Account Balance
+                  <input type="checkbox" id="hide-balance">
+                  <span class="slider"></span>
+              </label>
+          </div>
+      </div>
+      
+        <!-- Terms and Logout -->
+      <div class="terms-logout">
+        <div class="terms-section">
+            <div class="logout-item">
+                <i class="fa-solid fa-file-lines"></i>
+                <button id="terms-conditions">Terms & Conditions</button>
+                <i class="fa-solid fa-chevron-right arrow-icon"></i>
+            </div>
+        </div>
+        <div class="logout-section">
+            <div class="logout-item">
+                <i class="fa-solid fa-right-from-bracket"></i>
+                <button id="log-out" class="logout-btn">Log Out</button>
+                <i class="fa-solid fa-chevron-right arrow-icon"></i>
+            </div>
+        </div>
+    </div>   
 
 <!-- Footer Section -->
   <footer class="footer">
