--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -85,7 +85,7 @@
         <div class="terms-section">
             <div class="logout-item">
                 <i class="fa-solid fa-file-lines"></i>
-                <button id="terms-conditions">Terms & Conditions</button>
+                <button id="terms-conditions">Terms  &amp; Conditions</button>
                 <i class="fa-solid fa-chevron-right arrow-icon"></i>
             </div>
         </div>
