--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -12,7 +12,7 @@
   <div class="profile-container">
         <!-- Header -->
         <header class="profile-header">
-            <button class="back-btn"><i class="fa-solid fa-chevron-left arrow-icon"></i></button>
+            <a href="./Home.html"><button class="back-btn"><i class="fa-solid fa-chevron-left arrow-icon"></i></button></a>
             <h1>Profile</h1>
             <button class="settings-btn"><i class="fa-solid fa-bell"></i></button>
         </header>
@@ -84,16 +84,16 @@
       <div class="terms-logout">
         <div class="terms-section">
             <div class="logout-item">
-                <i class="fa-solid fa-file-lines"></i>
-                <button id="terms-conditions">Terms & Conditions</button>
+                <a href="../terms&conditions.html"><i class="fa-solid fa-file-lines"></i>
+                <button id="terms-conditions">Terms & Conditions</button></a>
                 <i class="fa-solid fa-chevron-right arrow-icon"></i>
             </div>
         </div>
         <div class="logout-section">
-            <div class="logout-item">
-                <i class="fa-solid fa-right-from-bracket"></i>
+            <div class="logout-item log-color">
+               <a href="../start.html"> <i class="fa-solid fa-right-from-bracket"></i>
                 <button id="log-out" class="logout-btn">Log Out</button>
-                <i class="fa-solid fa-chevron-right arrow-icon"></i>
+                <i class="fa-solid fa-chevron-right arrow-icon"></i></a>
             </div>
         </div>
     </div>   
