--- a/fgpassword.html
+++ b/fgpassword.html
@@ -45,7 +45,7 @@
                 </form>
                 <div class="reset-pw">
 
-                    <button type="submit">Reset Password</button>
+                   <a href="./start.html"> <button type="submit" id="reset-click">Reset Password</button></a>
 
                 </div>
 
