--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -84,8 +84,8 @@
       <div class="terms-logout">
         <div class="terms-section">
             <div class="logout-item">
-                <i class="fa-solid fa-file-lines"></i>
-                <button id="terms-conditions">Terms & Conditions</button>
+               <a href="../terms&conditions.html">  <i class="fa-solid fa-file-lines"></i>
+                <button id="terms-conditions">Terms & Conditions</button></a>
                 <i class="fa-solid fa-chevron-right arrow-icon"></i>
             </div>
         </div>
