--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -33,8 +33,8 @@
     <section class="wallet-balance">
       <p>Wallet Balance</p>
       <div class="balance-container">
-        <span class="balance">N10,000.00</span>
-        <button class="eye-icon" id="show" onclick="eye()"><i class="fa-solid fa-eye"></i></button>
+        <span class="balance">••••••</span>
+        <button class="eye-icon" id="show" ><i class="fa-solid fa-eye"></i></button>
       </div>
       <div class="add-money-spacing">
         <button class="add-money-btn">+ Add money</button>
