--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -34,7 +34,7 @@
       <p>Wallet Balance</p>
       <div class="balance-container">
         <span class="balance">••••••</span>
-        <button class="eye-icon" id="show" ><i class="fa-solid fa-eye"></i></button>
+        <button class="eye-icon" onclick="eye()" id="show" ><i class="fa-solid fa-eye"></i></button>
       </div>
       <div class="add-money-spacing">
         <button class="add-money-btn">+ Add money</button>
@@ -62,12 +62,12 @@
         <p>Pay Bills</p>
       </div>
       <div class="action">
-        <i class="fa-solid fa-piggy-bank"></i>
-        <p>Deposit</p>
+       <a href="./Deposit.html"> <i class="fa-solid fa-piggy-bank"></i>
+        <p>Deposit</p></a>
       </div>
       <div class="action">
-        <i class="fa-solid fa-wallet"></i>
-        <p>Withdraw</p>
+       <a href="./Withdraw.html"> <i class="fa-solid fa-wallet"></i>
+        <p>Withdraw</p></a>
       </div>
       <div class="action">
         <i class="fa-solid fa-chart-line"></i>
