--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -19,7 +19,7 @@
         <!-- Profile Info -->
         <div class="profile-info">
           <img src="../Assets/Profile pic.jpeg" alt="Profile Picture" class="profile-picture">
-          <h2>Jacob Jones</h2>
+          <h2 class="name"></h2>
           <p class="phone-number">+2347010000001</p>
       </div>
 
@@ -130,8 +130,9 @@
   </footer>
   
   <script src="../Scripts/Profile.js"></script>
-  <script>
-    
-  </script>
+  <script src="../Scripts/session.js"></script>
+  <script src="../Scripts/jquery/jquery.js"></script>
+  <!-- <script src="../Scripts/Home.js"></script> -->
+  <script src="../Scripts/sweetalert2/sweetalert2.all.min.js"></script>
 </body>
 </html>
