--- a/Pages/Deposit.html
+++ b/Pages/Deposit.html
@@ -39,6 +39,7 @@
 
       <button type="submit" class="btn">Deposit</button>
     </form>
+    <p id="receipt"></p>
   </main>
 
   <script src="../Scripts/Deposit.js"></script>
