--- a/Pages/Deposit.html
+++ b/Pages/Deposit.html
@@ -42,5 +42,6 @@
   </main>
 
   <script src="../Scripts/Deposit.js"></script>
+  <script src="https://js.paystack.co/v1/inline.js"></script>
 </body>
 </html>
