--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -16,7 +16,7 @@
 <body onload="checkSessionAndRedirect()">
   <div class="container">
     <!-- Header Section -->
-    <header class="header" onload="getuser_detail()">
+    <header class="header" >
       <div class="user-info">
         <img src="../Assets/Profile pic.jpeg" alt="Profile Image" class="profile-img">
         <div>
@@ -34,7 +34,7 @@
       <p>Wallet Balance</p>
       <div class="balance-container">
         <span class="balance">••••••</span>
-        <button class="eye-icon" onclick="eye()" id="show" ><i class="fa-solid fa-eye"></i></button>
+        <button class="eye-icon"  id="show" ><i class="fa-solid fa-eye"></i></button>
       </div>
       <div class="add-money-spacing">
         <button class="add-money-btn">+ Add money</button>
