--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -37,7 +37,7 @@
         <button class="eye-icon" onclick="eye()" id="show" ><i class="fa-solid fa-eye"></i></button>
       </div>
       <div class="add-money-spacing">
-        <button class="add-money-btn">+ Add money</button>
+        <a href="./Deposit.html"><button class="add-money-btn">+ Add money</button></a>
         <a href="./History.html" class="transaction-history-link">Transaction History ➜</a>
       </div>
     </section>
