--- a/Pages/Profile.html
+++ b/Pages/Profile.html
@@ -109,7 +109,7 @@
         <i class="fa-solid fa-trophy"></i>
         <span>Rewards</span>
       </a>
-      <a href="#" class="footer-link">
+      <a href="../convert.html" class="footer-link">
         <i class="fa-solid fa-wallet"></i>
         <span>Convert</span>
       </a>
@@ -118,7 +118,7 @@
         <i class="fa-solid fa-clock"></i>
         <span>History</span>
       </a>
-      <a href="#" class="footer-link active">
+      <a href="./Profile.html" class="footer-link active">
         <i class="fa-solid fa-user"></i>
         <span>Profile</span>
       </a>
