--- a/Pages/Reward.html
+++ b/Pages/Reward.html
@@ -77,7 +77,7 @@
         <i class="fa-solid fa-house"></i>
         <span>Home</span>
       </a>
-      <a href="#" class="footer-link active">
+      <a href="./Reward.html" class="footer-link active">
         <i class="fa-solid fa-trophy"></i>
         <span>Rewards</span>
       </a>
