--- a/Pages/Withdraw.html
+++ b/Pages/Withdraw.html
@@ -11,12 +11,12 @@
     <nav class="navbar">
         <div class="logo">
             <img src="../Assets/Air2Cash logo.png" alt="Air2Cash logo">
-            <p>Air2Cash</p>
+            <a href="./Home.html"><p>Air2Cash</p></a>
         </div>
       <ul class="nav-links">
-        <li><a href="home.html">Home</a></li>
-        <li><a href="deposit.html">Deposit</a></li>
-        <li><a href="withdraw.html" class="active">Withdraw</a></li>
+        <!-- <li><a href="./Home.html">Home</a></li> -->
+        <li><a href="./Deposit.html">Deposit</a></li>
+        <li><a href="./Withdraw.html" class="active">Withdraw</a></li>
       </ul>
     </nav>
   </header>
