--- a/convert.html
+++ b/convert.html
@@ -57,7 +57,7 @@
           <i class="fa-solid fa-clock"></i>
           <span>History</span>
         </a>
-        <a href="#" class="footer-link active">
+        <a href="./Pages/Profile.html" class="footer-link active">
           <i class="fa-solid fa-user"></i>
           <span>Profile</span>
         </a>
