--- a/fgpassword.html
+++ b/fgpassword.html
@@ -1,66 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Air2Cash</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="icon" href="./image/air2cashimage-removebg-preview.png">
-    <link rel="stylesheet" href="./Stylings/fgpassword.css">
-</head>
-<body>
-    
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" href="./image/air2cashimage-removebg-preview.png" />
+    <link rel="stylesheet" href="./Stylings/fgpassword.css" />
+  </head>
+  <body>
     <div class="opt-form">
-        <div class="fg-form">
-            <div class="header-form">
-                <h4>Forgot password?</h4>
-                <p>Please enter the Verification code we sent to ja*****nes@gmail.com </p>
-            </div>
-
-            <form action="javascript:void(0)">
-                <div class="auth-pin-wrap">
-                    <input type="text" class="code-input" required="">
-                    <input type="text" class="code-input" required="">
-                    <input type="text" class="code-input" required="">
-                    <input type="text" class="code-input" required="">
-                    <input type="text" class="code-input" required="">
-                    <input type="text" class="code-input" required="">
-                </div>
-                <div class="resend"> Resend in 60s</div>
-                <div class="btn-wrap">
-
-                    <button type="submit">Proceed</button>
-
-                </div>
-            </form>
+      <div class="fg-form">
+        <div class="header-form">
+          <h4>Forgot password?</h4>
+          <p>
+            Please enter the Verification code we sent to ja*****nes@gmail.com
+          </p>
         </div>
 
+        <form action="javascript:void(0)">
+          <div class="auth-pin-wrap">
+            <input type="text" class="code-input" required="" />
+            <input type="text" class="code-input" required="" />
+            <input type="text" class="code-input" required="" />
+            <input type="text" class="code-input" required="" />
+            <input type="text" class="code-input" required="" />
+            <input type="text" class="code-input" required="" />
+          </div>
+          <div class="resend">Resend in 60s</div>
+          <div class="btn-wrap">
+            <button type="submit">Proceed</button>
+          </div>
+        </form>
+      </div>
 
-            <div class="Create-new-pw">
-                <h4>Create New Password</h4>
-                <form action=" " class="form-pw">
-                    <input type="password" class="password" placeholder="Input New Password">
-                    <input type="password" class="password confirm" placeholder="Confirm New Password">
-                </form>
-                <div class="reset-pw">
+      <div class="Create-new-pw">
+        <h4>Create New Password</h4>
+        <form action=" " class="form-pw">
+          <input
+            type="password"
+            class="password"
+            placeholder="Input New Password"
+          />
+          <input
+            type="password"
+            class="password confirm"
+            placeholder="Confirm New Password"
+          />
+        </form>
+        <div class="reset-pw">
+          <a href="./start.html">
+            <button type="submit" id="reset-click">Reset Password</button></a
+          >
+        </div>
 
-                   <a href="./start.html"> <button type="submit" id="reset-click">Reset Password</button></a>
-
-                </div>
-
-    <!-- color: #01fe87; -->
-    <p>Can you still remember your password? <br> <a href="./start.html"><span style="color:#01fe87; opacity: 10;">Go back to your login page</span></a></p>
-            </div>
+        <!-- color: #01fe87; -->
+        <p>
+          Can you still remember your password? <br />
+          <a href="./start.html"
+            ><span style="color: #01fe87; opacity: 10"
+              >Go back to your login page</span
+            ></a
+          >
+        </p>
+      </div>
     </div>
 
+    <!-- *********************javascriptCode**************** -->
 
-<!-- *********************javascriptCode**************** -->
-
-    <script src="./animate.js">
-       
-    </script>
-
-   
-</body>
+    <script src="./animate.js"></script>
+  </body>
 </html>
