--- a/start.html
+++ b/start.html
@@ -38,7 +38,7 @@
 
           <div class="Remember-div">
             <ul class="checkbox">
-              <li><input type="checkbox" class="check" required> Remember me </li>
+              <li><input type="checkbox" class="check"> Remember me </li>
               <a href="./fgpassword.html">
                 <li class="forgot"> Forgot
                   password?</li>
