--- a/Pages/Deposit.html
+++ b/Pages/Deposit.html
@@ -10,12 +10,12 @@
   <header class="header">
     <div class="logo">
         <img src="../Assets/Air2Cash logo.png" alt="Air2Cash logo">
-        <p>Air2Cash</p>
+        <a href="./Home.html"><p>Air2Cash</p></a>
     </div>
     <nav class="nav">
-      <a href="home.html">Home</a>
-      <a href="deposit.html"class="active" >Deposit</a>
-      <a href="withdraw.html">Withdraw</a>
+      <!-- <a href="./Home.html">Home</a> -->
+      <a href="./Deposit.html"class="active" >Deposit</a>
+      <a href="./Withdraw.html">Withdraw</a>
     </nav>
   </header>
 
