--- a/convert.html
+++ b/convert.html
@@ -15,11 +15,11 @@
 <body onload="checkSessionAndRedirect()">
   <div class="icon">
     <ul class="icon-logo">
-      <li class="mtn" onclick="mtn()"><input type="#" class="logo" value="MTN"><img src="./image/128px-New-mtn-logo.jpg"
+      <li class="mtn" id="mtnButton"><input type="#" class="logo" value="MTN"><img src="./image/128px-New-mtn-logo.jpg"
           alt=""></li>
-      <li class="glo" onclick="glo()"><input type="text" class="logo glo" value="GLO"><img src="./image/gloimg.png"
+      <li class="glo" id="gloButton"><input type="text" class="logo glo" value="GLO"><img src="./image/gloimg.png"
           alt=""></li>
-      <li class="airtel" onclick="airtel()"><input type="text" class="logo airtel" value="AIRTEL "><img
+      <li class="airtel" id="airtelButton" ><input type="text" class="logo airtel" value="AIRTEL "><img
           src="./image/airtel.jpg" alt=""></li>
     </ul>
 
