--- a/Signup.html
+++ b/Signup.html
@@ -32,6 +32,7 @@
                     required>
                 <input type="password" id="pin" placeholder="Create Pin" name="pin" class="pin-code Create-pw pin"
                     required>
+                    <p>Must be up to 4 digits</p>
                 <input type="text" placeholder="Referral Code (Optional)" class="pin-code">
             </div>
 
