--- a/Pages/Deposit.html
+++ b/Pages/Deposit.html
@@ -1,36 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Deposit Page</title>
   <link rel="stylesheet" href="../Styles/Deposit.css">
 </head>
-<body>
+
+<body onload="checkSessionAndRedirect()">
   <header class="header">
     <div class="logo">
-        <img src="../Assets/Air2Cash logo.png" alt="Air2Cash logo">
-        <a href="./Home.html"><p>Air2Cash</p></a>
+      <img src="../Assets/Air2Cash logo.png" alt="Air2Cash logo">
+      <a href="./Home.html">
+        <p>Air2Cash</p>
+      </a>
     </div>
     <nav class="nav">
       <!-- <a href="./Home.html">Home</a> -->
-      <a href="./Deposit.html"class="active" >Deposit</a>
+      <a href="./Deposit.html" class="active">Deposit</a>
       <a href="./Withdraw.html">Withdraw</a>
     </nav>
   </header>
 
   <main class="container">
     <h1>Deposit Funds</h1>
-    <form id="depositForm" class="form">
+    <form id="paymentForm" class="form">
       <label for="amount">Amount (₦):</label>
       <input type="number" id="amount" name="amount" required placeholder="Enter amount">
- 
+
       <button type="submit" class="btn">Deposit</button>
     </form>
     <p id="receipt"></p>
   </main>
-
+  <script src="../Scripts/jquery/jquery.js"></script>
+  <script src="../Scripts/sweetalert2/sweetalert2.all.min.js"></script>
+  <script src="../Scripts/session.js"></script>
   <script src="../Scripts/Deposit.js"></script>
   <script src="https://js.paystack.co/v1/inline.js"></script>
 </body>
+
 </html>
